# 2026-nimechoka

./: .gitignore  COOKIE_REFRESH_GUIDE.md  FIX_AUTH_NOW.md  FIX_SUMMARY.md  GEMINI_AUTH_FIX.md  PIPELINE_WALKTHROUGH.md  README.md  SUMMARY.md  USAGE_GUIDE.md  VIDEO_GENERATION_GUIDE.md  bulk_processor.py  complete_video_workflow.sh  fix_video_prompts_format.py  init_and_run.bat  init_and_run.sh  init_and_run_bible.sh  main.py  meta_cookies.example.json  regenerate_video_prompts.py  regenerate_video_prompts_preserve_style.py  requirements.txt  resume_video_generation.sh  style_guide.json  test_direct_meta_video.py  test_enhance_prompts.py  test_gemini_auth.py  test_grok_quick.py  test_grok_video.py  test_imagefx_to_meta.py  test_meta_text_to_video.py  test_meta_video.py  test_meta_video_v2.py  test_meta_video_v3.py  test_pipeline.py  test_print_prompts.py  test_req_html.py  test_story_flow_integration.py  test_whisk_to_meta.py  test_wojak_style.py
AIStudio2API/: .gitattributes  .gitignore  README.md  README_en.md  _selector_audit.py  auto_update.bat  pyproject.toml  setup.bat  setup.sh  start_cmd.bat  start_webui.bat
AIStudio2API/camoufox/: fetch_camoufox_data.py  update_browserforge_data.py
AIStudio2API/docker/: Dockerfile  docker-compose.yml
AIStudio2API/docs/: api-usage.md  authentication-setup.md  client-stop-mechanisms-analysis.md  development-guide.md  docker-deployment.md  dom-debug.md  installation-guide.md  media-generation-guide.md  multi-worker-guide.md  openapi.yaml  project-structure.md  reverse-engineering-internals.md  troubleshooting.md  tts-guide.md
(+134 files in other folders)
