[project]
name = "aistudio2api"
version = "0.1.0"
description = "AI Studio Proxy API - Convert Google AI Studio to OpenAI compatible API"
authors = [{name = "Mag1cFall", email = "lk25611295@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.12",
    "pydantic>=2.7.1,<3.0.0",
    "uvicorn==0.29.0",
    "python-dotenv==1.0.1",
    "websockets>=12.0",
    "httptools>=0.6.4",
    "uvloop; sys_platform != 'win32'",
    "playwright==1.48.0",
    "camoufox[geoip]==0.4.11",
    "cryptography==42.0.5",
    "aiohttp>=3.9.5",
    "requests==2.31.0",
    "pyjwt==2.8.0",
    "Flask==3.0.3",
    "aiosocks~=0.2.6",
    "python-socks~=2.7.1"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
aistudio = "src.app_launcher:main"
aistudio2api = "src.app_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
